fix layout problem, fix my-profile link

--- a/src/app/components/weekly-menu/weekly-menu.component.scss
+++ b/src/app/components/weekly-menu/weekly-menu.component.scss
@@ -24,6 +24,10 @@
           display: flex;
           justify-content: space-between;
           align-items: center;
+
+          .ingredient__buttons {
+            display: flex;
+          }
         }
       }
     }
